[package]
name = "sage-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
hyper = "0.14"
http = "0.2"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-service = "0.3"
tower-http = { version = "0.2", features = ["cors", "compression-gzip", "compression-deflate", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.2"
sage = { git = "https://github.com/lazear/sage" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"