[tool.poetry]
name = "sage-server-api"
version = "0.1.0"
description = ""
authors = ["Michael Lazear <lazear@scripps.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
